Create Base64 abstraction in Java code base, with a default implementation based on DatatypeConverter. Restore Base64 encoding validity check, in sync with the JavaScript implementation (which now also has an improved regex). Update unit tests to match Base64 encoding validity checks.