@@ -35,7 +35,6 @@ import javax.crypto.NoSuchPaddingException;
 import javax.crypto.SecretKey;
 import javax.crypto.spec.OAEPParameterSpec;
 import javax.crypto.spec.SecretKeySpec;
-import javax.xml.bind.DatatypeConverter;
 
 import org.json.JSONException;
 import org.json.JSONObject;
@@ -63,6 +62,7 @@ import com.netflix.msl.entityauth.EntityAuthenticationData;
 import com.netflix.msl.tokens.MasterToken;
 import com.netflix.msl.tokens.TokenFactory;
 import com.netflix.msl.util.AuthenticationUtils;
+import com.netflix.msl.util.Base64;
 import com.netflix.msl.util.MslContext;
 
 /**
@@ -290,7 +290,7 @@ public class AsymmetricWrappedExchange extends KeyExchangeFactory {
                     throw new MslKeyExchangeException(MslError.UNIDENTIFIED_KEYX_MECHANISM, mechanismName, e);
                 }
                 try {
-                    encodedKey = DatatypeConverter.parseBase64Binary(keyRequestJO.getString(KEY_PUBLIC_KEY));
+                    encodedKey = Base64.decode(keyRequestJO.getString(KEY_PUBLIC_KEY));
                 } catch (final IllegalArgumentException e) {
                     throw new MslCryptoException(MslError.KEYX_INVALID_PUBLIC_KEY, "keydata " + keyRequestJO.toString(), e);
                 }
@@ -369,7 +369,7 @@ public class AsymmetricWrappedExchange extends KeyExchangeFactory {
             final JSONObject jsonObj = new JSONObject();
             jsonObj.put(KEY_KEY_PAIR_ID, keyPairId);
             jsonObj.put(KEY_MECHANISM, mechanism.name());
-            jsonObj.put(KEY_PUBLIC_KEY, DatatypeConverter.printBase64Binary(publicKey.getEncoded()));
+            jsonObj.put(KEY_PUBLIC_KEY, Base64.encode(publicKey.getEncoded()));
             return jsonObj;
         }
 
@@ -473,12 +473,12 @@ public class AsymmetricWrappedExchange extends KeyExchangeFactory {
             try {
                 keyPairId = keyDataJO.getString(KEY_KEY_PAIR_ID);
                 try {
-                    encryptionKey = DatatypeConverter.parseBase64Binary(keyDataJO.getString(KEY_ENCRYPTION_KEY));
+                    encryptionKey = Base64.decode(keyDataJO.getString(KEY_ENCRYPTION_KEY));
                 } catch (final IllegalArgumentException e) {
                     throw new MslKeyExchangeException(MslError.KEYX_INVALID_ENCRYPTION_KEY, "keydata " + keyDataJO.toString(), e);
                 }
                 try {
-                    hmacKey = DatatypeConverter.parseBase64Binary(keyDataJO.getString(KEY_HMAC_KEY));
+                    hmacKey = Base64.decode(keyDataJO.getString(KEY_HMAC_KEY));
                 } catch (final IllegalArgumentException e) {
                     throw new MslKeyExchangeException(MslError.KEYX_INVALID_HMAC_KEY, "keydata " + keyDataJO.toString(), e);
                 }
@@ -512,8 +512,8 @@ public class AsymmetricWrappedExchange extends KeyExchangeFactory {
         protected JSONObject getKeydata() throws JSONException {
             final JSONObject jsonObj = new JSONObject();
             jsonObj.put(KEY_KEY_PAIR_ID, keyPairId);
-            jsonObj.put(KEY_ENCRYPTION_KEY, DatatypeConverter.printBase64Binary(encryptionKey));
-            jsonObj.put(KEY_HMAC_KEY, DatatypeConverter.printBase64Binary(hmacKey));
+            jsonObj.put(KEY_ENCRYPTION_KEY, Base64.encode(encryptionKey));
+            jsonObj.put(KEY_HMAC_KEY, Base64.encode(hmacKey));
             return jsonObj;
         }
         
